src/grammars/loops/loopsParser.py
# Generated from src/grammars/loops/loops.g4 by ANTLR 4.9.1
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys




class loopsParser ( Parser ):

    grammarFileName = "loops.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'*'", u"'/'", u"'+'", u"'-'", u"'<'", 
                     u"'>'", u"'=='", u"'='", u"'%'", u"'<='", u"'>='", 
                     u"'!='", u"'&&'", u"'||'", u"'!'", u"'++'", u"'--'", 
                     u"'('", u"')'", u"'{'", u"'}'", u"';'", u"':'", u"'.'", 
                     u"'&'", u"'''", u"'\\'", u"'const'", u"'signed'", u"'unsigned'", 
                     u"'int'", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"'float'", u"'double'", u"'long double'", 
                     u"<INVALID>", u"'char'", u"<INVALID>", u"<INVALID>", 
                     u"'printf'", u"'if'", u"'else if'", u"'else'", u"'for'", 
                     u"'while'", u"'break'", u"'continue'", u"'switch'", 
                     u"'case'", u"'default'" ]

    symbolicNames = [ u"<INVALID>", u"MUL", u"DIV", u"ADD", u"SUB", u"LT", 
                      u"GT", u"DEQ", u"EQ", u"MOD", u"LTE", u"GTE", u"NEQ", 
                      u"AND", u"OR", u"NOT", u"INCR", u"DECR", u"LBRACKET", 
                      u"RBRACKET", u"LCURLY", u"RCURLY", u"END_INSTR", u"D_POINT", 
                      u"DOT", u"REF", u"SQUOTE", u"ESC", u"CONST", u"SIGNED", 
                      u"UNSIGNED", u"INT_PREF", u"SHORT_PREF", u"LONG_PREF", 
                      u"LONG_LONG_PREF", u"INT", u"FLOAT_PREF", u"DOUBLE_PREF", 
                      u"LONG_DOUBLE_PREF", u"FLOAT", u"CHAR_PREF", u"CHAR", 
                      u"STRING", u"PRINTF", u"IF", u"ELIF", u"ELSE", u"FOR", 
                      u"WHILE", u"BREAK", u"CONTINUE", u"SWITCH", u"CASE", 
                      u"DEFAULT", u"ID", u"WS", u"SINGLE_COMMENT", u"MULTI_COMMENT" ]

    RULE_prog = 0
    RULE_stat = 1
    RULE_expr = 2
    RULE_loop_stat = 3
    RULE_increment = 4
    RULE_block_stat = 5
    RULE_type_specifier = 6
    RULE_literal = 7
    RULE_declaration = 8
    RULE_definition = 9
    RULE_assignment = 10
    RULE_function_call = 11

    ruleNames =  [ u"prog", u"stat", u"expr", u"loop_stat", u"increment", 
                   u"block_stat", u"type_specifier", u"literal", u"declaration", 
                   u"definition", u"assignment", u"function_call" ]

    EOF = Token.EOF
    MUL=1
    DIV=2
    ADD=3
    SUB=4
    LT=5
    GT=6
    DEQ=7
    EQ=8
    MOD=9
    LTE=10
    GTE=11
    NEQ=12
    AND=13
    OR=14
    NOT=15
    INCR=16
    DECR=17
    LBRACKET=18
    RBRACKET=19
    LCURLY=20
    RCURLY=21
    END_INSTR=22
    D_POINT=23
    DOT=24
    REF=25
    SQUOTE=26
    ESC=27
    CONST=28
    SIGNED=29
    UNSIGNED=30
    INT_PREF=31
    SHORT_PREF=32
    LONG_PREF=33
    LONG_LONG_PREF=34
    INT=35
    FLOAT_PREF=36
    DOUBLE_PREF=37
    LONG_DOUBLE_PREF=38
    FLOAT=39
    CHAR_PREF=40
    CHAR=41
    STRING=42
    PRINTF=43
    IF=44
    ELIF=45
    ELSE=46
    FOR=47
    WHILE=48
    BREAK=49
    CONTINUE=50
    SWITCH=51
    CASE=52
    DEFAULT=53
    ID=54
    WS=55
    SINGLE_COMMENT=56
    MULTI_COMMENT=57

    def __init__(self, input, output=sys.stdout):
        super(loopsParser, self).__init__(input, output=output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(loopsParser.ProgContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return loopsParser.RULE_prog

     
        def copyFrom(self, ctx):
            super(loopsParser.ProgContext, self).copyFrom(ctx)



    class ProgramContext(ProgContext):

        def __init__(self, parser, ctx): # actually a loopsParser.ProgContext)
            super(loopsParser.ProgramContext, self).__init__(parser)
            self.copyFrom(ctx)

        def stat(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(loopsParser.StatContext)
            else:
                return self.getTypedRuleContext(loopsParser.StatContext,i)


        def enterRule(self, listener):
            if hasattr(listener, "enterProgram"):
                listener.enterProgram(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitProgram"):
                listener.exitProgram(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitProgram"):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)



    def prog(self):

        localctx = loopsParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            localctx = loopsParser.ProgramContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 25 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 24
                self.stat()
                self.state = 27 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << loopsParser.MUL) | (1 << loopsParser.ADD) | (1 << loopsParser.SUB) | (1 << loopsParser.NOT) | (1 << loopsParser.INCR) | (1 << loopsParser.DECR) | (1 << loopsParser.LBRACKET) | (1 << loopsParser.REF) | (1 << loopsParser.CONST) | (1 << loopsParser.SIGNED) | (1 << loopsParser.UNSIGNED) | (1 << loopsParser.INT_PREF) | (1 << loopsParser.SHORT_PREF) | (1 << loopsParser.LONG_PREF) | (1 << loopsParser.LONG_LONG_PREF) | (1 << loopsParser.INT) | (1 << loopsParser.FLOAT_PREF) | (1 << loopsParser.DOUBLE_PREF) | (1 << loopsParser.LONG_DOUBLE_PREF) | (1 << loopsParser.FLOAT) | (1 << loopsParser.CHAR_PREF) | (1 << loopsParser.CHAR) | (1 << loopsParser.STRING) | (1 << loopsParser.ID))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(loopsParser.StatContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return loopsParser.RULE_stat

     
        def copyFrom(self, ctx):
            super(loopsParser.StatContext, self).copyFrom(ctx)



    class DefinitionStatementContext(StatContext):

        def __init__(self, parser, ctx): # actually a loopsParser.StatContext)
            super(loopsParser.DefinitionStatementContext, self).__init__(parser)
            self.copyFrom(ctx)

        def definition(self):
            return self.getTypedRuleContext(loopsParser.DefinitionContext,0)

        def END_INSTR(self):
            return self.getToken(loopsParser.END_INSTR, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterDefinitionStatement"):
                listener.enterDefinitionStatement(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDefinitionStatement"):
                listener.exitDefinitionStatement(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitDefinitionStatement"):
                return visitor.visitDefinitionStatement(self)
            else:
                return visitor.visitChildren(self)


    class AssignmentStatementContext(StatContext):

        def __init__(self, parser, ctx): # actually a loopsParser.StatContext)
            super(loopsParser.AssignmentStatementContext, self).__init__(parser)
            self.copyFrom(ctx)

        def assignment(self):
            return self.getTypedRuleContext(loopsParser.AssignmentContext,0)

        def END_INSTR(self):
            return self.getToken(loopsParser.END_INSTR, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterAssignmentStatement"):
                listener.enterAssignmentStatement(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAssignmentStatement"):
                listener.exitAssignmentStatement(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitAssignmentStatement"):
                return visitor.visitAssignmentStatement(self)
            else:
                return visitor.visitChildren(self)


    class ExpressionStatementContext(StatContext):

        def __init__(self, parser, ctx): # actually a loopsParser.StatContext)
            super(loopsParser.ExpressionStatementContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(loopsParser.ExprContext,0)

        def END_INSTR(self):
            return self.getToken(loopsParser.END_INSTR, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterExpressionStatement"):
                listener.enterExpressionStatement(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitExpressionStatement"):
                listener.exitExpressionStatement(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitExpressionStatement"):
                return visitor.visitExpressionStatement(self)
            else:
                return visitor.visitChildren(self)


    class DeclarationStatementContext(StatContext):

        def __init__(self, parser, ctx): # actually a loopsParser.StatContext)
            super(loopsParser.DeclarationStatementContext, self).__init__(parser)
            self.copyFrom(ctx)

        def declaration(self):
            return self.getTypedRuleContext(loopsParser.DeclarationContext,0)

        def END_INSTR(self):
            return self.getToken(loopsParser.END_INSTR, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterDeclarationStatement"):
                listener.enterDeclarationStatement(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDeclarationStatement"):
                listener.exitDeclarationStatement(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitDeclarationStatement"):
                return visitor.visitDeclarationStatement(self)
            else:
                return visitor.visitChildren(self)



    def stat(self):

        localctx = loopsParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.state = 41
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = loopsParser.DefinitionStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 29
                self.definition()
                self.state = 30
                self.match(loopsParser.END_INSTR)
                pass

            elif la_ == 2:
                localctx = loopsParser.DeclarationStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 32
                self.declaration()
                self.state = 33
                self.match(loopsParser.END_INSTR)
                pass

            elif la_ == 3:
                localctx = loopsParser.AssignmentStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 35
                self.assignment()
                self.state = 36
                self.match(loopsParser.END_INSTR)
                pass

            elif la_ == 4:
                localctx = loopsParser.ExpressionStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 38
                self.expr(0)
                self.state = 39
                self.match(loopsParser.END_INSTR)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(loopsParser.ExprContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return loopsParser.RULE_expr

     
        def copyFrom(self, ctx):
            super(loopsParser.ExprContext, self).copyFrom(ctx)


    class UnaryOpContext(ExprContext):

        def __init__(self, parser, ctx): # actually a loopsParser.ExprContext)
            super(loopsParser.UnaryOpContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(loopsParser.ExprContext,0)

        def ADD(self):
            return self.getToken(loopsParser.ADD, 0)
        def SUB(self):
            return self.getToken(loopsParser.SUB, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterUnaryOp"):
                listener.enterUnaryOp(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitUnaryOp"):
                listener.exitUnaryOp(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitUnaryOp"):
                return visitor.visitUnaryOp(self)
            else:
                return visitor.visitChildren(self)


    class IdentifierContext(ExprContext):

        def __init__(self, parser, ctx): # actually a loopsParser.ExprContext)
            super(loopsParser.IdentifierContext, self).__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(loopsParser.ID, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterIdentifier"):
                listener.enterIdentifier(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitIdentifier"):
                listener.exitIdentifier(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitIdentifier"):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)


    class BracketsContext(ExprContext):

        def __init__(self, parser, ctx): # actually a loopsParser.ExprContext)
            super(loopsParser.BracketsContext, self).__init__(parser)
            self.copyFrom(ctx)

        def LBRACKET(self):
            return self.getToken(loopsParser.LBRACKET, 0)
        def expr(self):
            return self.getTypedRuleContext(loopsParser.ExprContext,0)

        def RBRACKET(self):
            return self.getToken(loopsParser.RBRACKET, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterBrackets"):
                listener.enterBrackets(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitBrackets"):
                listener.exitBrackets(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitBrackets"):
                return visitor.visitBrackets(self)
            else:
                return visitor.visitChildren(self)


    class UnaryOpIdentifierSuffixContext(ExprContext):

        def __init__(self, parser, ctx): # actually a loopsParser.ExprContext)
            super(loopsParser.UnaryOpIdentifierSuffixContext, self).__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(loopsParser.ID, 0)
        def INCR(self):
            return self.getToken(loopsParser.INCR, 0)
        def DECR(self):
            return self.getToken(loopsParser.DECR, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterUnaryOpIdentifierSuffix"):
                listener.enterUnaryOpIdentifierSuffix(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitUnaryOpIdentifierSuffix"):
                listener.exitUnaryOpIdentifierSuffix(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitUnaryOpIdentifierSuffix"):
                return visitor.visitUnaryOpIdentifierSuffix(self)
            else:
                return visitor.visitChildren(self)


    class UnaryOpPointerContext(ExprContext):

        def __init__(self, parser, ctx): # actually a loopsParser.ExprContext)
            super(loopsParser.UnaryOpPointerContext, self).__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(loopsParser.ID, 0)
        def MUL(self):
            return self.getToken(loopsParser.MUL, 0)
        def REF(self):
            return self.getToken(loopsParser.REF, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterUnaryOpPointer"):
                listener.enterUnaryOpPointer(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitUnaryOpPointer"):
                listener.exitUnaryOpPointer(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitUnaryOpPointer"):
                return visitor.visitUnaryOpPointer(self)
            else:
                return visitor.visitChildren(self)


    class LiteralExprContext(ExprContext):

        def __init__(self, parser, ctx): # actually a loopsParser.ExprContext)
            super(loopsParser.LiteralExprContext, self).__init__(parser)
            self.copyFrom(ctx)

        def literal(self):
            return self.getTypedRuleContext(loopsParser.LiteralContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterLiteralExpr"):
                listener.enterLiteralExpr(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitLiteralExpr"):
                listener.exitLiteralExpr(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitLiteralExpr"):
                return visitor.visitLiteralExpr(self)
            else:
                return visitor.visitChildren(self)


    class UnaryOpBooleanContext(ExprContext):

        def __init__(self, parser, ctx): # actually a loopsParser.ExprContext)
            super(loopsParser.UnaryOpBooleanContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(loopsParser.ExprContext,0)

        def NOT(self):
            return self.getToken(loopsParser.NOT, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterUnaryOpBoolean"):
                listener.enterUnaryOpBoolean(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitUnaryOpBoolean"):
                listener.exitUnaryOpBoolean(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitUnaryOpBoolean"):
                return visitor.visitUnaryOpBoolean(self)
            else:
                return visitor.visitChildren(self)


    class UnaryOpIdentifierPrefixContext(ExprContext):

        def __init__(self, parser, ctx): # actually a loopsParser.ExprContext)
            super(loopsParser.UnaryOpIdentifierPrefixContext, self).__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(loopsParser.ID, 0)
        def INCR(self):
            return self.getToken(loopsParser.INCR, 0)
        def DECR(self):
            return self.getToken(loopsParser.DECR, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterUnaryOpIdentifierPrefix"):
                listener.enterUnaryOpIdentifierPrefix(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitUnaryOpIdentifierPrefix"):
                listener.exitUnaryOpIdentifierPrefix(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitUnaryOpIdentifierPrefix"):
                return visitor.visitUnaryOpIdentifierPrefix(self)
            else:
                return visitor.visitChildren(self)


    class BinaryOpContext(ExprContext):

        def __init__(self, parser, ctx): # actually a loopsParser.ExprContext)
            super(loopsParser.BinaryOpContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(loopsParser.ExprContext)
            else:
                return self.getTypedRuleContext(loopsParser.ExprContext,i)

        def MUL(self):
            return self.getToken(loopsParser.MUL, 0)
        def DIV(self):
            return self.getToken(loopsParser.DIV, 0)
        def MOD(self):
            return self.getToken(loopsParser.MOD, 0)
        def ADD(self):
            return self.getToken(loopsParser.ADD, 0)
        def SUB(self):
            return self.getToken(loopsParser.SUB, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterBinaryOp"):
                listener.enterBinaryOp(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitBinaryOp"):
                listener.exitBinaryOp(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitBinaryOp"):
                return visitor.visitBinaryOp(self)
            else:
                return visitor.visitChildren(self)


    class BinaryOpBooleanContext(ExprContext):

        def __init__(self, parser, ctx): # actually a loopsParser.ExprContext)
            super(loopsParser.BinaryOpBooleanContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(loopsParser.ExprContext)
            else:
                return self.getTypedRuleContext(loopsParser.ExprContext,i)

        def LT(self):
            return self.getToken(loopsParser.LT, 0)
        def GT(self):
            return self.getToken(loopsParser.GT, 0)
        def LTE(self):
            return self.getToken(loopsParser.LTE, 0)
        def GTE(self):
            return self.getToken(loopsParser.GTE, 0)
        def DEQ(self):
            return self.getToken(loopsParser.DEQ, 0)
        def NEQ(self):
            return self.getToken(loopsParser.NEQ, 0)
        def AND(self):
            return self.getToken(loopsParser.AND, 0)
        def OR(self):
            return self.getToken(loopsParser.OR, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterBinaryOpBoolean"):
                listener.enterBinaryOpBoolean(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitBinaryOpBoolean"):
                listener.exitBinaryOpBoolean(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitBinaryOpBoolean"):
                return visitor.visitBinaryOpBoolean(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = loopsParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = loopsParser.BracketsContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 44
                self.match(loopsParser.LBRACKET)
                self.state = 45
                self.expr(0)
                self.state = 46
                self.match(loopsParser.RBRACKET)
                pass

            elif la_ == 2:
                localctx = loopsParser.UnaryOpPointerContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 48
                _la = self._input.LA(1)
                if not(_la==loopsParser.MUL or _la==loopsParser.REF):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 49
                self.match(loopsParser.ID)
                pass

            elif la_ == 3:
                localctx = loopsParser.UnaryOpIdentifierPrefixContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 50
                _la = self._input.LA(1)
                if not(_la==loopsParser.INCR or _la==loopsParser.DECR):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 51
                self.match(loopsParser.ID)
                pass

            elif la_ == 4:
                localctx = loopsParser.UnaryOpIdentifierSuffixContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 52
                self.match(loopsParser.ID)
                self.state = 53
                _la = self._input.LA(1)
                if not(_la==loopsParser.INCR or _la==loopsParser.DECR):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass

            elif la_ == 5:
                localctx = loopsParser.UnaryOpContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 54
                _la = self._input.LA(1)
                if not(_la==loopsParser.ADD or _la==loopsParser.SUB):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 55
                self.expr(9)
                pass

            elif la_ == 6:
                localctx = loopsParser.UnaryOpBooleanContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 56
                self.match(loopsParser.NOT)
                self.state = 57
                self.expr(8)
                pass

            elif la_ == 7:
                localctx = loopsParser.LiteralExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 58
                self.literal()
                pass

            elif la_ == 8:
                localctx = loopsParser.IdentifierContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 59
                self.match(loopsParser.ID)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 79
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 77
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        localctx = loopsParser.BinaryOpContext(self, loopsParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 62
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 63
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << loopsParser.MUL) | (1 << loopsParser.DIV) | (1 << loopsParser.MOD))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 64
                        self.expr(8)
                        pass

                    elif la_ == 2:
                        localctx = loopsParser.BinaryOpContext(self, loopsParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 65
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 66
                        _la = self._input.LA(1)
                        if not(_la==loopsParser.ADD or _la==loopsParser.SUB):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 67
                        self.expr(7)
                        pass

                    elif la_ == 3:
                        localctx = loopsParser.BinaryOpBooleanContext(self, loopsParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 68
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 69
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << loopsParser.LT) | (1 << loopsParser.GT) | (1 << loopsParser.LTE) | (1 << loopsParser.GTE))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 70
                        self.expr(6)
                        pass

                    elif la_ == 4:
                        localctx = loopsParser.BinaryOpBooleanContext(self, loopsParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 71
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 72
                        _la = self._input.LA(1)
                        if not(_la==loopsParser.DEQ or _la==loopsParser.NEQ):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 73
                        self.expr(5)
                        pass
